# gamert

./: .gitmodules  LICENSE  README.md
code/: CMakeLists.txt
code/gamert/: CMakeLists.txt
code/gamert/.refactor-fadeout/: rendermgr.cpp  rendermgr.hpp  vkapp.cpp  vkapp.hpp  vkutils.cpp  vkutils.hpp
code/gamert/doc/: gamert.md
code/gamert/inc/: gamert-application.hpp  pre-req.hpp  singleton.hpp
code/gamert/inc/dynopt-lua/: luart.hpp
code/gamert/inc/dynopt-lua-export/: lexp-class.hpp  lexp-networksmgr.hpp  lexp-vscenegraph.hpp  lexp.hpp
code/gamert/inc/fs/: config-dynopt.hpp  config-master.hpp  config-networks.hpp  configmgr.hpp  fileop.hpp  filter-lscene.hpp  filter-vscene.hpp  resmgr-runtime.hpp  resmgr-static.hpp  resourcesmgr.hpp
code/gamert/inc/graphics/: rendermgr.hpp  vcamera.hpp  vdrawcall.hpp  vdrawcall2d.hpp  vmatrix.hpp  vnode-quad.hpp  vnode-quad2d.hpp  vnode-rect.hpp  vnode.hpp  vnode2d.hpp  vscenegraph.hpp  vscenegraph2d.hpp  vvector.hpp  vvertex.hpp
code/gamert/inc/logic/: lnode.hpp  lnode2d-character-observer.hpp  lnode2d-character.hpp  lnode2d-move.hpp  logicmgr.hpp  lscenegraph.hpp  ltimer.hpp  opt-bindvnode.hpp
code/gamert/inc/networks/: networksmgr.hpp
code/gamert/inc/osys/: dllutils.hpp
code/gamert/inc/utils/: utils-string.hpp
code/gamert/inc/vklayer/: vkapp.hpp  vkcontext.hpp  vkdevice.hpp  vkrenderer.hpp  vkrenderer2d.hpp  vkswapchain.hpp  vkutils.hpp
code/gamert/inc/win/: joystick.hpp  osenv.hpp  win-gamert-app.hpp
code/gamert/src/: gamert-application.cpp
code/gamert/src/dynopt-lua/: luart.cpp
code/gamert/src/dynopt-lua-export/: lexp-class.cpp  lexp-networksmgr.cpp  lexp-vscenegraph.cpp  lexp.cpp
code/gamert/src/fs/: config-dynopt.cpp  config-master.cpp  config-networks.cpp  configmgr.cpp  fileop.cpp  filter-lscene.cpp  filter-vscene.cpp  resmgr-runtime.cpp  resmgr-static.cpp  resourcesmgr.cpp
code/gamert/src/graphics/: rendermgr.cpp  vcamera.cpp  vdrawcall2d.cpp  vnode-quad.cpp  vnode-quad2d.cpp  vnode-rect.cpp  vnode.cpp  vnode2d.cpp  vscenegraph.cpp  vscenegraph2d.cpp  vvertex.cpp
code/gamert/src/logic/: lnode.cpp  lnode2d-character-observer.cpp  lnode2d-character.cpp  lnode2d-move.cpp  logicmgr.cpp  lscenegraph.cpp  ltimer.cpp
code/gamert/src/networks/: networksmgr.cpp
code/gamert/src/osys/: dllutils.cpp
code/gamert/src/utils/: utils-string.cpp
code/gamert/src/vklayer/: vkapp.cpp  vkcontext.cpp  vkdevice.cpp  vkrenderer2d.cpp  vkswapchain.cpp  vkutils.cpp
code/gamert/src/win/: gamert.cpp  joystick.cpp  win-gamert-app.cpp
test-env/gamert-dev-root/configs/: dynopt.xml  master.xml  networks.xml
test-env/gamert-dev-root/lscene/: character_sync.xml  default.xml
test-env/gamert-dev-root/scripts/: gameapp.lua  root-app-init.lua
test-env/gamert-dev-root/scripts/boot/: class.lua  game.lua
test-env/gamert-dev-root/shaders/: simple_2drgb.vert.spv
test-env/gamert-dev-root/shaders/src/: simple_2drgb.vert
test-env/gamert-dev-root/vscene/: default.xml
